CHANGES:

14/06/2015:
- allow to build doc only for the api classes, using --with-docs=no|api|full
  to create no documentation, only API classes' documentations, all classes'
  documentations
  
5/28/2015:
- add a minimal parser for ApplePict v1.v2,
  ie. no clipping, do not take in account the copy mode: srcCopy, srcOr, ...

-------- version 0.3.5 (start)  -------------

5/10/2015:
- add a parser for MacDraft v1 Document

4/29/2015:
- add a parser for ClarisDraw Document

4/18/2015:
- RagTime v5-v6 parser(not functional): continue to works on this filter,
  try to find the different kinds of cluster and how to parse them, ...
- AppleWorks/ClarisWorks parser[spreadsheet]: do not remove first empty row/columns.
- remove all assert calls
- rename Box2,Vec2,... in MWAWBox2, MWAWVec2,... to avoid potential name's conflict

-------- version 0.3.5 (start)  -------------

12/26/2014:
- modify API's functions to avoid potential throw.

11/9/2014:
- AppleWorks/ClarisWorks parser[draw]: 
  try to send master pages on each page of the final documents
  try to do not cut shapes, pictures which are on several pages (by creating bigger pages)

10/29/2014:
- MacDraw Pro: add a parser for MacDraw Pro v1

-------- version 0.3.4 (start)  -------------

10/2/2014:
- RagTime v5-v6: begin to find the main structures in a document, to be continued...
- fix some coverity problems.

9/12/2014:
- AppleWorks: add a presentation parser

8/22/2014:
- MacDraw II: add a parser for MacDraw II v1.0-v1.1

-------- version 0.3.3 (start)  -------------

7/28/2014:
- AppleWorks/ClarisWorks: manage multiple headers/footers + better rebuilding of complex group

7/1/2014:
- MacDraw: add a parser for v0 and v1 documents

6/22/2014:
- RagTime: add a parser to parse v2 and v3 documents

6/6/2014:
- rewrite MWAWCellContent::double2Date to avoid problem with 32/64 time_t values
- correct many <<small>> problems

-------- version 0.3.2 (start)  -------------

5/23/2014